--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -9,7 +9,7 @@ dependencies:
     sdk: flutter
   flutter_google_places:
     path: ../
-  google_api_headers: ^0.1.1+1
+  google_api_headers: ^1.0.0
 
 dev_dependencies:
   flutter_test:
